--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -238,6 +238,9 @@ allow 176.65.149.84;
 allow 176.65.149.87;
 allow 176.65.149.88;
 allow 176.65.149.96;
+allow 176.65.151.192;
+allow 176.65.151.193;
+allow 176.65.151.194;
 allow 176.97.114.202;
 allow 177.149.145.208;
 allow 177.93.140.66;
@@ -323,7 +326,6 @@ allow 185.165.171.84;
 allow 185.170.114.25;
 allow 185.183.157.214;
 allow 185.183.159.40;
-allow 185.191.204.254;
 allow 185.191.239.158;
 allow 185.191.239.49;
 allow 185.193.52.180;
@@ -957,7 +959,6 @@ allow 23.137.253.27;
 allow 23.137.254.244;
 allow 23.151.8.8;
 allow 23.155.8.104;
-allow 23.184.48.78;
 allow 23.191.200.10;
 allow 23.191.200.11;
 allow 23.191.200.12;
@@ -1019,7 +1020,6 @@ allow 2602:f6f6:2:dc17::1;
 allow 2602:fa8a:3:a::a;
 allow 2602:fc24:10:bb36::1;
 allow 2602:fc24:12:81a6::1;
-allow 2602:fc24:18:f38f::1;
 allow 2602:fc24:19:524::1;
 allow 2602:fc24:19:eb06::dead;
 allow 2602:fccf:100:3::14;
@@ -1210,6 +1210,7 @@ allow 2803:cd80:2000:10::db8f:5f60;
 allow 2a00:16b0:1:243::7012:3117;
 allow 2a00:16b0:1:243::7012:a500;
 allow 2a00:16b0:1:243::7012:e817;
+allow 2a00:1728:f:f:f:f:c03c:9898;
 allow 2a00:1b88:4::2;
 allow 2a00:1b88:4::4;
 allow 2a00:1dc0:caff:12c::4d3a;
@@ -1889,6 +1890,7 @@ allow 87.118.116.90;
 allow 87.118.122.30;
 allow 87.118.122.51;
 allow 87.120.222.33;
+allow 87.120.254.132;
 allow 88.151.192.2;
 allow 88.80.20.86;
 allow 88.80.26.2;
