--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -238,6 +238,9 @@ deny 176.65.149.84;
 deny 176.65.149.87;
 deny 176.65.149.88;
 deny 176.65.149.96;
+deny 176.65.151.192;
+deny 176.65.151.193;
+deny 176.65.151.194;
 deny 176.97.114.202;
 deny 177.149.145.208;
 deny 177.93.140.66;
@@ -323,7 +326,6 @@ deny 185.165.171.84;
 deny 185.170.114.25;
 deny 185.183.157.214;
 deny 185.183.159.40;
-deny 185.191.204.254;
 deny 185.191.239.158;
 deny 185.191.239.49;
 deny 185.193.52.180;
@@ -957,7 +959,6 @@ deny 23.137.253.27;
 deny 23.137.254.244;
 deny 23.151.8.8;
 deny 23.155.8.104;
-deny 23.184.48.78;
 deny 23.191.200.10;
 deny 23.191.200.11;
 deny 23.191.200.12;
@@ -1019,7 +1020,6 @@ deny 2602:f6f6:2:dc17::1;
 deny 2602:fa8a:3:a::a;
 deny 2602:fc24:10:bb36::1;
 deny 2602:fc24:12:81a6::1;
-deny 2602:fc24:18:f38f::1;
 deny 2602:fc24:19:524::1;
 deny 2602:fc24:19:eb06::dead;
 deny 2602:fccf:100:3::14;
@@ -1210,6 +1210,7 @@ deny 2803:cd80:2000:10::db8f:5f60;
 deny 2a00:16b0:1:243::7012:3117;
 deny 2a00:16b0:1:243::7012:a500;
 deny 2a00:16b0:1:243::7012:e817;
+deny 2a00:1728:f:f:f:f:c03c:9898;
 deny 2a00:1b88:4::2;
 deny 2a00:1b88:4::4;
 deny 2a00:1dc0:caff:12c::4d3a;
@@ -1889,6 +1890,7 @@ deny 87.118.116.90;
 deny 87.118.122.30;
 deny 87.118.122.51;
 deny 87.120.222.33;
+deny 87.120.254.132;
 deny 88.151.192.2;
 deny 88.80.20.86;
 deny 88.80.26.2;
