--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -147,7 +147,6 @@ deny 2602:f6f6:2:dc17::1;
 deny 2602:fa8a:3:a::a;
 deny 2602:fc24:10:bb36::1;
 deny 2602:fc24:12:81a6::1;
-deny 2602:fc24:18:f38f::1;
 deny 2602:fc24:19:524::1;
 deny 2602:fc24:19:eb06::dead;
 deny 2602:fccf:100:3::14;
@@ -337,6 +336,7 @@ deny 2803:cd80:2000:10::db8f:5f60;
 deny 2a00:16b0:1:243::7012:3117;
 deny 2a00:16b0:1:243::7012:a500;
 deny 2a00:16b0:1:243::7012:e817;
+deny 2a00:1728:f:f:f:f:c03c:9898;
 deny 2a00:1b88:4::2;
 deny 2a00:1b88:4::4;
 deny 2a00:1dc0:caff:12c::4d3a;
