--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -326,6 +326,7 @@ allow 185.165.171.84;
 allow 185.170.114.25;
 allow 185.183.157.214;
 allow 185.183.159.40;
+allow 185.191.204.254;
 allow 185.191.239.158;
 allow 185.191.239.49;
 allow 185.193.52.180;
@@ -490,7 +491,6 @@ allow 185.227.68.78;
 allow 185.231.102.51;
 allow 185.233.100.23;
 allow 185.235.146.29;
-allow 185.240.242.5;
 allow 185.241.208.115;
 allow 185.241.208.185;
 allow 185.241.208.202;
@@ -959,6 +959,7 @@ allow 23.137.253.27;
 allow 23.137.254.244;
 allow 23.151.8.8;
 allow 23.155.8.104;
+allow 23.184.48.78;
 allow 23.191.200.10;
 allow 23.191.200.11;
 allow 23.191.200.12;
@@ -1020,6 +1021,7 @@ allow 2602:f6f6:2:dc17::1;
 allow 2602:fa8a:3:a::a;
 allow 2602:fc24:10:bb36::1;
 allow 2602:fc24:12:81a6::1;
+allow 2602:fc24:18:f38f::1;
 allow 2602:fc24:19:524::1;
 allow 2602:fc24:19:eb06::dead;
 allow 2602:fccf:100:3::14;
@@ -1771,7 +1773,6 @@ allow 45.95.169.109;
 allow 45.95.169.110;
 allow 45.95.169.252;
 allow 46.165.243.36;
-allow 46.183.217.211;
 allow 46.23.109.25;
 allow 46.232.251.191;
 allow 46.234.47.105;
