--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -147,6 +147,7 @@ deny 2602:f6f6:2:dc17::1;
 deny 2602:fa8a:3:a::a;
 deny 2602:fc24:10:bb36::1;
 deny 2602:fc24:12:81a6::1;
+deny 2602:fc24:18:f38f::1;
 deny 2602:fc24:19:524::1;
 deny 2602:fc24:19:eb06::dead;
 deny 2602:fccf:100:3::14;
