--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -326,6 +326,7 @@ set_real_ip_from 185.165.171.84;
 set_real_ip_from 185.170.114.25;
 set_real_ip_from 185.183.157.214;
 set_real_ip_from 185.183.159.40;
+set_real_ip_from 185.191.204.254;
 set_real_ip_from 185.191.239.158;
 set_real_ip_from 185.191.239.49;
 set_real_ip_from 185.193.52.180;
@@ -490,7 +491,6 @@ set_real_ip_from 185.227.68.78;
 set_real_ip_from 185.231.102.51;
 set_real_ip_from 185.233.100.23;
 set_real_ip_from 185.235.146.29;
-set_real_ip_from 185.240.242.5;
 set_real_ip_from 185.241.208.115;
 set_real_ip_from 185.241.208.185;
 set_real_ip_from 185.241.208.202;
@@ -959,6 +959,7 @@ set_real_ip_from 23.137.253.27;
 set_real_ip_from 23.137.254.244;
 set_real_ip_from 23.151.8.8;
 set_real_ip_from 23.155.8.104;
+set_real_ip_from 23.184.48.78;
 set_real_ip_from 23.191.200.10;
 set_real_ip_from 23.191.200.11;
 set_real_ip_from 23.191.200.12;
@@ -1020,6 +1021,7 @@ set_real_ip_from 2602:f6f6:2:dc17::1;
 set_real_ip_from 2602:fa8a:3:a::a;
 set_real_ip_from 2602:fc24:10:bb36::1;
 set_real_ip_from 2602:fc24:12:81a6::1;
+set_real_ip_from 2602:fc24:18:f38f::1;
 set_real_ip_from 2602:fc24:19:524::1;
 set_real_ip_from 2602:fc24:19:eb06::dead;
 set_real_ip_from 2602:fccf:100:3::14;
@@ -1771,7 +1773,6 @@ set_real_ip_from 45.95.169.109;
 set_real_ip_from 45.95.169.110;
 set_real_ip_from 45.95.169.252;
 set_real_ip_from 46.165.243.36;
-set_real_ip_from 46.183.217.211;
 set_real_ip_from 46.23.109.25;
 set_real_ip_from 46.232.251.191;
 set_real_ip_from 46.234.47.105;
