--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -821,7 +821,6 @@ allow 213.152.176.135;
 allow 216.239.90.19;
 allow 216.73.159.101;
 allow 216.73.159.75;
-allow 216.9.224.232;
 allow 217.12.221.131;
 allow 220.135.36.173;
 allow 23.129.64.130;
@@ -926,7 +925,6 @@ allow 23.137.253.254;
 allow 23.137.253.27;
 allow 23.137.254.244;
 allow 23.151.8.8;
-allow 23.155.8.104;
 allow 23.184.48.78;
 allow 23.191.200.10;
 allow 23.191.200.11;
@@ -977,7 +975,6 @@ allow 2600:3c04::f03c:95ff:fe41:d42c;
 allow 2600:3c0a::2000:34ff:fe4d:7faf;
 allow 2600:3c0a::f03c:95ff:fe5d:a877;
 allow 2600:3c0b::f03c:95ff:fefa:bdff;
-allow 2602:2e5::104;
 allow 2602:f6f6:2:2634::1;
 allow 2602:f6f6:2:3637::1;
 allow 2602:f6f6:2:90f1::1;
@@ -1537,6 +1534,7 @@ allow 2a10:c800:1:9cc6::1;
 allow 2a10:c800:1:f7f8:0:1ce:1ce:babe;
 allow 2a11:6100:0:12:a236:9fff:fe9e:36ea;
 allow 2a11:6100:0:1467::;
+allow 2a12:5940:5186::2;
 allow 2a12:a800:11:1:124:198:131:108;
 allow 2a12:a800:11:1:124:198:131:223;
 allow 2a12:a800:11:1:124:198:131:253;
@@ -1609,6 +1607,7 @@ allow 2c0f:6c0:0:d::d28b;
 allow 31.129.22.65;
 allow 31.133.0.210;
 allow 31.184.236.104;
+allow 31.220.75.237;
 allow 31.44.238.25;
 allow 35.0.127.52;
 allow 37.114.50.124;
@@ -1635,7 +1634,6 @@ allow 38.135.25.142;
 allow 38.135.25.143;
 allow 38.135.25.144;
 allow 38.135.25.2;
-allow 38.242.254.131;
 allow 38.97.116.242;
 allow 38.97.116.243;
 allow 38.97.116.244;
@@ -1663,6 +1661,7 @@ allow 45.138.16.248;
 allow 45.138.16.42;
 allow 45.138.16.69;
 allow 45.138.16.76;
+allow 45.138.74.232;
 allow 45.141.215.110;
 allow 45.141.215.114;
 allow 45.141.215.167;
