--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -73,7 +73,6 @@ set_real_ip_from 107.189.13.180;
 set_real_ip_from 107.189.13.253;
 set_real_ip_from 107.189.13.254;
 set_real_ip_from 107.189.14.4;
-set_real_ip_from 107.189.14.43;
 set_real_ip_from 107.189.1.9;
 set_real_ip_from 107.189.2.108;
 set_real_ip_from 107.189.29.184;
@@ -149,6 +148,13 @@ set_real_ip_from 139.99.8.57;
 set_real_ip_from 141.98.11.62;
 set_real_ip_from 144.126.133.74;
 set_real_ip_from 146.103.43.17;
+set_real_ip_from 146.19.143.119;
+set_real_ip_from 146.19.143.132;
+set_real_ip_from 146.19.143.16;
+set_real_ip_from 146.19.143.181;
+set_real_ip_from 146.19.143.225;
+set_real_ip_from 146.19.143.54;
+set_real_ip_from 146.19.143.92;
 set_real_ip_from 146.59.126.232;
 set_real_ip_from 146.59.231.4;
 set_real_ip_from 147.45.116.145;
@@ -215,6 +221,11 @@ set_real_ip_from 173.237.206.68;
 set_real_ip_from 173.255.198.243;
 set_real_ip_from 176.118.193.33;
 set_real_ip_from 176.121.81.51;
+set_real_ip_from 176.124.32.101;
+set_real_ip_from 176.124.32.122;
+set_real_ip_from 176.124.32.130;
+set_real_ip_from 176.124.32.145;
+set_real_ip_from 176.124.32.171;
 set_real_ip_from 176.58.100.98;
 set_real_ip_from 176.58.121.177;
 set_real_ip_from 176.58.89.182;
@@ -281,6 +292,14 @@ set_real_ip_from 185.112.146.167;
 set_real_ip_from 185.113.128.30;
 set_real_ip_from 185.120.16.171;
 set_real_ip_from 185.120.16.176;
+set_real_ip_from 185.123.53.164;
+set_real_ip_from 185.123.53.165;
+set_real_ip_from 185.123.53.174;
+set_real_ip_from 185.123.53.184;
+set_real_ip_from 185.123.53.217;
+set_real_ip_from 185.123.53.22;
+set_real_ip_from 185.123.53.226;
+set_real_ip_from 185.123.53.42;
 set_real_ip_from 185.126.114.110;
 set_real_ip_from 185.129.61.1;
 set_real_ip_from 185.129.61.10;
@@ -587,6 +606,11 @@ set_real_ip_from 192.42.116.27;
 set_real_ip_from 192.42.116.28;
 set_real_ip_from 193.105.134.150;
 set_real_ip_from 193.105.134.155;
+set_real_ip_from 193.109.120.199;
+set_real_ip_from 193.109.120.230;
+set_real_ip_from 193.109.120.59;
+set_real_ip_from 193.109.120.71;
+set_real_ip_from 193.109.120.8;
 set_real_ip_from 193.189.100.194;
 set_real_ip_from 193.189.100.195;
 set_real_ip_from 193.189.100.196;
@@ -600,6 +624,8 @@ set_real_ip_from 193.189.100.203;
 set_real_ip_from 193.189.100.204;
 set_real_ip_from 193.189.100.205;
 set_real_ip_from 193.189.100.206;
+set_real_ip_from 193.233.201.122;
+set_real_ip_from 193.233.201.93;
 set_real_ip_from 193.237.221.228;
 set_real_ip_from 193.239.232.102;
 set_real_ip_from 193.26.115.140;
@@ -614,6 +640,12 @@ set_real_ip_from 194.15.112.133;
 set_real_ip_from 194.15.113.118;
 set_real_ip_from 194.15.115.212;
 set_real_ip_from 194.15.36.117;
+set_real_ip_from 194.26.141.106;
+set_real_ip_from 194.26.141.109;
+set_real_ip_from 194.26.141.110;
+set_real_ip_from 194.26.141.24;
+set_real_ip_from 194.26.141.45;
+set_real_ip_from 194.26.141.75;
 set_real_ip_from 194.26.192.77;
 set_real_ip_from 194.53.137.102;
 set_real_ip_from 194.87.55.98;
@@ -924,6 +956,7 @@ set_real_ip_from 23.137.253.254;
 set_real_ip_from 23.137.253.27;
 set_real_ip_from 23.137.254.244;
 set_real_ip_from 23.151.8.8;
+set_real_ip_from 23.155.8.104;
 set_real_ip_from 23.184.48.78;
 set_real_ip_from 23.191.200.10;
 set_real_ip_from 23.191.200.11;
@@ -974,6 +1007,7 @@ set_real_ip_from 2600:3c04::f03c:95ff:fe41:d42c;
 set_real_ip_from 2600:3c0a::2000:34ff:fe4d:7faf;
 set_real_ip_from 2600:3c0a::f03c:95ff:fe5d:a877;
 set_real_ip_from 2600:3c0b::f03c:95ff:fefa:bdff;
+set_real_ip_from 2602:2e5::104;
 set_real_ip_from 2602:f6f6:2:2634::1;
 set_real_ip_from 2602:f6f6:2:3637::1;
 set_real_ip_from 2602:f6f6:2:90f1::1;
@@ -1057,7 +1091,6 @@ set_real_ip_from 2605:6400:30:f805:1e96:b223:fbe5:cfac;
 set_real_ip_from 2605:6400:30:f82f:7de1:3de3:8947:bc6a;
 set_real_ip_from 2605:6400:30:f858:2704:73e1:7085:12ef;
 set_real_ip_from 2605:6400:30:f8b5:620c:dc25:c624:aafd;
-set_real_ip_from 2605:6400:30:f8da:2b2:a293:30ad:506d;
 set_real_ip_from 2605:6400:30:f920:f523:28ef:3617:8b86;
 set_real_ip_from 2605:6400:40:fe09::2;
 set_real_ip_from 2605:a140:2262:7686::1;
@@ -1642,6 +1675,13 @@ set_real_ip_from 43.160.194.14;
 set_real_ip_from 45.11.59.28;
 set_real_ip_from 45.12.3.80;
 set_real_ip_from 45.128.133.242;
+set_real_ip_from 45.129.199.122;
+set_real_ip_from 45.129.199.159;
+set_real_ip_from 45.129.199.162;
+set_real_ip_from 45.129.199.235;
+set_real_ip_from 45.129.199.239;
+set_real_ip_from 45.129.199.70;
+set_real_ip_from 45.129.199.84;
 set_real_ip_from 45.132.246.245;
 set_real_ip_from 45.13.225.69;
 set_real_ip_from 45.13.225.78;
@@ -1753,7 +1793,6 @@ set_real_ip_from 5.255.103.235;
 set_real_ip_from 5.255.104.202;
 set_real_ip_from 5.255.110.120;
 set_real_ip_from 5.255.111.64;
-set_real_ip_from 5.255.115.58;
 set_real_ip_from 5.255.117.56;
 set_real_ip_from 5.255.118.151;
 set_real_ip_from 5.255.118.218;
@@ -1804,6 +1843,9 @@ set_real_ip_from 77.48.28.193;
 set_real_ip_from 77.48.28.204;
 set_real_ip_from 77.48.28.237;
 set_real_ip_from 77.48.28.239;
+set_real_ip_from 77.72.85.133;
+set_real_ip_from 77.72.85.168;
+set_real_ip_from 77.72.85.176;
 set_real_ip_from 77.81.247.72;
 set_real_ip_from 78.142.18.219;
 set_real_ip_from 80.241.60.207;
@@ -1876,6 +1918,11 @@ set_real_ip_from 91.219.236.101;
 set_real_ip_from 91.219.236.91;
 set_real_ip_from 91.219.237.39;
 set_real_ip_from 91.227.114.153;
+set_real_ip_from 91.235.234.143;
+set_real_ip_from 91.235.234.145;
+set_real_ip_from 91.235.234.67;
+set_real_ip_from 91.235.234.74;
+set_real_ip_from 91.235.234.92;
 set_real_ip_from 91.92.109.126;
 set_real_ip_from 91.92.109.43;
 set_real_ip_from 92.243.24.163;
