--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -232,6 +232,7 @@ deny 176.58.121.177;
 deny 176.58.89.182;
 deny 176.65.148.133;
 deny 176.65.148.3;
+deny 176.65.149.100;
 deny 176.65.149.105;
 deny 176.65.149.84;
 deny 176.65.149.87;
@@ -1297,6 +1298,7 @@ deny 2a05:541:110:3e::1;
 deny 2a05:541:112:31::1;
 deny 2a05:b0c7:6388::1;
 deny 2a05:b0c7:655b::1;
+deny 2a05:b0c7:67c6::1;
 deny 2a05:b0c7:6949::1;
 deny 2a05:b0c7:6bd4::1;
 deny 2a05:b0c7:6cc4::1;
