--- a/set_real_ip_from-tor_ips_v4.conf
+++ b/set_real_ip_from-tor_ips_v4.conf
@@ -232,6 +232,7 @@ set_real_ip_from 176.58.121.177;
 set_real_ip_from 176.58.89.182;
 set_real_ip_from 176.65.148.133;
 set_real_ip_from 176.65.148.3;
+set_real_ip_from 176.65.149.100;
 set_real_ip_from 176.65.149.105;
 set_real_ip_from 176.65.149.84;
 set_real_ip_from 176.65.149.87;
