--- a/set_real_ip_from-tor_ips_v4.conf
+++ b/set_real_ip_from-tor_ips_v4.conf
@@ -61,6 +61,7 @@ set_real_ip_from 104.244.79.61;
 set_real_ip_from 104.254.90.195;
 set_real_ip_from 104.36.80.7;
 set_real_ip_from 107.174.146.25;
+set_real_ip_from 107.175.93.157;
 set_real_ip_from 107.189.10.175;
 set_real_ip_from 107.189.1.111;
 set_real_ip_from 107.189.11.111;
