--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -230,6 +230,7 @@ deny 176.124.32.171;
 deny 176.58.100.98;
 deny 176.58.121.177;
 deny 176.58.89.182;
+deny 176.65.134.4;
 deny 176.65.148.133;
 deny 176.65.148.3;
 deny 176.65.149.100;
@@ -1017,6 +1018,7 @@ deny 2602:f6f6:2:ad5c::1;
 deny 2602:f6f6:2:cf34::1;
 deny 2602:f6f6:2:d31a::1;
 deny 2602:f6f6:2:dc17::1;
+deny 2602:f915:f:3b43::1;
 deny 2602:fa8a:3:a::a;
 deny 2602:fc24:10:bb36::1;
 deny 2602:fc24:12:81a6::1;
@@ -1640,7 +1642,6 @@ deny 2c0f:6c0:0:d::d28b;
 deny 31.129.22.65;
 deny 31.133.0.210;
 deny 31.184.236.104;
-deny 31.220.75.237;
 deny 31.44.238.25;
 deny 35.0.127.52;
 deny 37.114.50.124;
@@ -1668,6 +1669,7 @@ deny 38.135.25.142;
 deny 38.135.25.143;
 deny 38.135.25.144;
 deny 38.135.25.2;
+deny 38.242.254.131;
 deny 38.97.116.242;
 deny 38.97.116.243;
 deny 38.97.116.244;
