--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -145,6 +145,7 @@ deny 2602:f6f6:2:ad5c::1;
 deny 2602:f6f6:2:cf34::1;
 deny 2602:f6f6:2:d31a::1;
 deny 2602:f6f6:2:dc17::1;
+deny 2602:f915:f:3b43::1;
 deny 2602:fa8a:3:a::a;
 deny 2602:fc24:10:bb36::1;
 deny 2602:fc24:12:81a6::1;
