--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -617,6 +617,7 @@ allow 194.26.192.77;
 allow 194.53.137.102;
 allow 194.87.55.98;
 allow 195.160.220.104;
+allow 195.170.172.212;
 allow 195.176.3.23;
 allow 195.176.3.24;
 allow 195.246.231.197;
@@ -819,6 +820,7 @@ allow 212.95.54.78;
 allow 216.239.90.19;
 allow 216.73.159.101;
 allow 216.73.159.75;
+allow 216.9.224.232;
 allow 217.12.221.131;
 allow 220.135.36.173;
 allow 23.129.64.130;
@@ -1250,7 +1252,6 @@ allow 2a04:52c0:103:412::1;
 allow 2a04:52c0:103:5acd::1;
 allow 2a04:52c0:104:4735::1;
 allow 2a04:52c0:104:ad97::1;
-allow 2a04:52c0:105:d7eb::1;
 allow 2a04:52c0:106:394:e813:c39a:9eb9:d95b;
 allow 2a04:52c0:106:d219::1;
 allow 2a04:52c0:108:a34f::1;
@@ -1297,6 +1298,7 @@ allow 2a09:61c0::22;
 allow 2a09:61c0::beef;
 allow 2a0a:4cc0:40:91b:7425:2eff:fec8:5578;
 allow 2a0a:4cc0:c1:12a1:58f9:e7ff:fe0b:b0f1;
+allow 2a0b:8bc0:2:b6a8::1;
 allow 2a0b:f4c0:16c:10::1;
 allow 2a0b:f4c0:16c:1::1;
 allow 2a0b:f4c0:16c:11::1;
@@ -1759,7 +1761,6 @@ allow 51.81.222.62;
 allow 51.91.18.151;
 allow 5.196.95.34;
 allow 5.253.247.27;
-allow 5.255.100.26;
 allow 5.255.101.10;
 allow 5.255.101.131;
 allow 5.255.103.235;
